# INF2004-T90

Docs/: INF2004.docx
Drivers/Encoder/: encoder.c
Drivers/IR Barcode/: adc_console.c
Drivers/IR Line/: CMakeLists.txt  ir_line.h
Drivers/Magnetometer/: CMakeLists.txt  MAGNETOMETER.H  MAGNETOMETER_MAIN.C  Magnetometer.c
Drivers/Mapping/: mapping.c
Drivers/Motor/: Wheels.c  motor.c
Drivers/UltrasonicSensor/: ultrasonicsensor.c
IR Barcode/: CMakeLists.txt
IR Line/: ir_line.c
Magnetometer/: Magnetometer.c
Main/90/: NinetyDegree.c
Main/PID/: pid.c
Main/Straight/: Straight_correction.c
Main/Ultra/: Ultrasonic_comp.c
Motor/: Wheels.c
UltrasonicSensor/: CMakeLists.txt
wifi/: main.c
wifi-barcode-freertos-pid/: CMakeLists.txt  cgi.h  htmldata.c  lwipopts.h  picow_freertos_ping.c
wifi-barcode-freertos-pid/html_files/: index.shtml
